styles.css
.calendar-container {
  *{
    box-sizing: border-box;
  }
  .vault-calendar {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
    transition: all 0.5s;
    &:has(.day.sun:hover) {
      grid-template-columns: 3fr 1fr 1fr 1fr 1fr 1fr 1fr; 
    }
    &:has(.day.mon:hover) {
      grid-template-columns: 1fr 3fr 1fr 1fr 1fr 1fr 1fr; 
    }
    &:has(.day.tue:hover) {
      grid-template-columns: 1fr 1fr 3fr 1fr 1fr 1fr 1fr; 
    }
    &:has(.day.wed:hover) {
      grid-template-columns: 1fr 1fr 1fr 3fr 1fr 1fr 1fr; 
    }
    &:has(.day.thu:hover) {
      grid-template-columns: 1fr 1fr 1fr 1fr 3fr 1fr 1fr; 
    }
    &:has(.day.fri:hover) {
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 3fr 1fr; 
    }
    &:has(.day.sat:hover) {
      grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 3fr; 
    }
    grid-template-rows: max-content;
    grid-auto-rows: minmax(10vh,min-content);
    div {
      border:2px solid var(--background-modifier-border);
      padding: 0;
      padding-right: 0.2rem;
      padding-left: 0.2rem;
      position:relative;
      overflow-x:hidden;
      color: var(--text-normal);
      &.header {
        font-weight: bold;
        color: var(--text-normal);
        text-align: center;
        background-color: var(--background-secondary);
        height: max-content;
      }
      &.day{
        max-height:20vh;
        min-height: 10vh;
        &:hover {
          cursor: copy;
          transition: all 0.5s;
          background-color: var(--background-modifier-hover);
          li.event {
            text-wrap: wrap;
          }
         }
      }
    }
    ul.nodecoration {
      list-style: none;
      padding: 0 !important;
      margin: 0 !important;
      display:flex;
      flex-direction: column;
      align-content: flex-start;
      justify-content: space-between;
      li.event {
        overflow:hidden;
        text-wrap: nowrap;
        &:hover {
          background: var(--background-modifier-active-hover);
          transition: background 0.3s;
          cursor: pointer;
        }
      }
      li.daynum {
        color: var(--text-muted);
        text-align: left;
        font-size: 10pt;
        line-height: 10pt;
        padding: 0.1rem;
        margin: 0;
        &.today {
          color: var(--text-normal);
          background-color: var(--background-secondary);
          border-bottom: 1px solid var(--background-modifier-border);
        }
        &:hover {
          cursor: copy;
        }
      }
      li.event + li.event {
        border-top: 1px solid var(--background-modifier-border);
      }
    }
    li.nodecoration {
      padding-top: 0.1rem;
      padding-bottom: 0.5rem;
      margin-left:0;
      margin-right:0;
      display: inline-block;
      margin-inline-start: 0 !important;
      width:100%;
    }
  }

  div.calendar-switcher {
    width: 100%;
    display:flex;
    flex-direction: row;
    justify-content: stretch;
    align-content:end;
    text-align:center;
    &:hover{
      cursor:pointer;
    }
    span.active {
      font-weight: bold;
      color: var(--text-normal);
      font-size: 14pt;
      background-color: var(--background-secondary);
      border: 1px solid var(--background-modifier-border);
      flex:1;
    }
    span.hidden {
      font-size: 12pt;
      color: var(--text-faint);
      font-weight: normal;
      border:none;
      border-bottom: 1px solid var(--background-modifier-border);
      flex:1;
    }
  }
}

